# imghash-py

./: .gitignore  README.md  imghashpy.pyi  pyproject.toml
.github/workflows/: checks.yml  release.yml
src/: lib.rs
tests/: test_average_hash.py
