[project]
name = "imghash"
version = "0.1.0"
description = "Image hashing powered by Rust"

requires-python = ">=3.8,<3.14"

authors = [{ name = "Yannick Alexander", email = "yannick@alexanderdev.io" }]
license = "MIT"
readme = "README.md"


[tool.rye]
managed = true
dev-dependencies = ["pip>=24.2", "pytest>=8.3.2", "ruff>=0.5.6"]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"
